Fix alignment on 'LeftArrow' button

--- a/src/routes/Chronicle/style.css
+++ b/src/routes/Chronicle/style.css
@@ -12,7 +12,7 @@
 .LeftArrow {
    position: relative;
    bottom: 140px;
-   right: 36px;
+   right: 46px;
 }
 
 .RightArrow {
@@ -59,7 +59,7 @@
    }
    .ChronicleCard {
       min-height: 100%;
-      height: 66vw;
+      height: 60vh;
    }
    .ContentColumnContainer {
       max-width: unset;
